--- a/Q3_Code/Q3_Trainer2.ipynb
+++ b/Q3_Code/Q3_Trainer2.ipynb
@@ -188,7 +188,7 @@
     "# Length of the input sequence during training\n",
     "timesteps = 64\n",
     "data_coeff = 1\n",
-    "num_bins = 3\n",
+    "num_bins = 5\n",
     "\n",
     "# Data Sets\n",
     "#REV 1\n",
@@ -271,7 +271,6 @@
     "# datasets_AA = [dataSet20, dataSet21, dataSet22, dataSet23, dataSet24]#, dataSet25, dataSet26, dataSet27, dataSet28, dataSet29, dataSet30, dataSet31, dataSet32]#, dataSet33, dataSet34, dataSet35, dataSet36]\n",
     "# datasets_BB = [dataSet37, dataSet38, dataSet40, dataSet41, dataSet42]#, dataSet45]#, dataSet46]\n",
     "# datasets_CC = [dataSet39, dataSet43, dataSet44, dataSet47, dataSet48]#, dataSet49]\n",
-    "\n",
     "# # Do not train on this data. Use it for predictions\n",
     "# predict_AA = [dataSet33, dataSet34, dataSet35, dataSet36]\n",
     "# predict_BB = [dataSet46]#, dataSet22, dataSet30]\n",
@@ -404,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
